--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!--
 ---
 layout: page
-title: Another DataScience blog 
+title: <!--Another DataScience blog-->
 subtitle: 
 use-site-title: true
 ---
--->
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
