--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: <!--Another DataScience blog-->
-subtitle: 
+title: Let's talk about ...
+subtitle: DataScience / Android / iOS
 use-site-title: true
 ---
 
